# QPanda

./: .gitignore  QRunes.md  README.md
QPandaSDK/: .gitignore  CMakeLists.txt  Makefile  QuantumProgramExecutionSystem.sln  README.md  https.py  shor.txt  shor_15.txt
QPandaSDK/Application/: CMakeLists.txt  ConsoleApplication.cpp
QPandaSDK/ConfigFile/: HTTPFile  help.xml  key
QPandaSDK/ConsoleApplication/: ConsoleApplication.cpp  ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters  key
QPandaSDK/ConsoleApplication/ConfigFile/: Cloud.db  creat.sql  help.xml
QPandaSDK/ConsoleApplication/x64/Release/ConsoleA.101B8C05.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication.lastbuildstate  ConsoleApplication.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QPandaSDK/GPUEmulator/: CMakeLists.txt  GPUEmulator.vcxproj  GPUGates.cu  GPUGatesDecl.h  GPUStruct.h  Makefile
QPandaSDK/QPandaAPI/: CMakeLists.txt  Makefile  Makefile.QPandaAPI-swig  QPandaAPI.cpp  QPandaAPI.filters  QPandaAPI.h  QPandaAPI.i  QPandaAPI.py  QPandaAPI.vcxproj  QPandaAPI_wrap.cxx
QPandaSDK/QRunesParser/: CMakeLists.txt  LinkedListController.cpp  LinkedListController.h  Makefile  QParamStruct.h  QRunesParser.cpp  QRunesParser.h  QRunesParser.vcxproj  QRunesParser.vcxproj.filters  QRunesParserAPI.cpp  QRunesParserAPI.h  lex.yy.cpp  parser.h  test  y.tab.cpp  y.tab.h
QPandaSDK/QuantumCloudHTTP/: CMakeLists.txt  QuantumCloudHTTP.cpp  QuantumCloudHTTP.h  QuantumCloudHTTP.vcxproj  QuantumCloudHTTP.vcxproj.filters  VirtualQCHttp.cpp  VirtualQCHttp.h  jsoncpp.cpp
QPandaSDK/QuantumCloudHTTP/x64/Release/QuantumCloudHTTP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QuantumCloudHTTP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QPandaSDK/QuantumCommandControl/: CMakeLists.txt  QCloudCommandVector.cpp  QCloudCommandVector.h  QCommand.cpp  QCommand.h  QCommandVectorBase.h  QSimulateCommandVector.cpp  QSimulateCommandVector.h  QSqlist.h  QuantumCommandControl.vcxproj  QuantumCommandControl.vcxproj.filters  QuantumCommandCtrAPI.cpp  QuantumCommandCtrAPI.h
QPandaSDK/QuantumCommandControl/x64/Release/QuantumC.1C0193C3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QuantumCommandControl.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
QPandaSDK/QuantumInstructionHandle/: CMakeLists.txt  CPUQuantumGates.cpp  CPUQuantumGates.h  GPUQuantumGates.cpp  GPUQuantumGates.h  Instruction.cpp  Instruction.h  Makefile  QError.h  QuantumGateParameter.h  QuantumGates.cpp  QuantumGates.h  QuantumInstructionGet.cpp  QuantumInstructionGet.h  QuantumInstructionHandle.vcxproj  QuantumInstructionHandle.vcxproj.filters  QuantumInstructionHandleAPI.cpp  QuantumInstructionHandleAPI.h  X86QuantumGates.cpp  X86QuantumGates.h  a.out
QPandaSDK/include/: ERROR_INFO.h  Instruction.h  LinkedListController.h  QCommand.h  QCommandVector.h  QParamStruct.h  QRunesParser.h  QRunrsParserAPI.h  QuantumCommandCtrAPI.h  QuantumGates.h  QuantumGatesAPI.h  QuantumGatesParameterStructure.h  QuantumInstructionGet.h  QuantumInstructionHandleAPI.h  QuantumInstructionSimulateAPI.h  RingMemory.h  X86QuantumGates.h  https.py  parser.h  y.tab.h
QPandaSDK/include/Python/: patchlevel.h
QPandaSDK/lib/: sqlite3.lib  tinyxml.lib  tinyxmlSTL.lib
QPandaSDK/linuxlib/: test.py  test.txt
QPandaSDK/pyQPanda/: CMakeLists.txt  pyQPanda.cpp  test.py  test.txt
QPandaSDK/testMain/: CMakeLists.txt  head.h  main.cpp  shor_15.txt  testCPUQuantumGates.cpp  testQPandaAPI.cpp  testQRunesParser.cpp  testQuantumInstructionHandle.cpp  testfile.txt
QRunes/: README.md
QRunesGenerator/: README.md
QRunesGenerator/Example/: main.cpp
QRunesGenerator/QRunesGenerator/: .gitignore  CMakeLists.txt  QRunesGenerator.sln
QRunesGenerator/QRunesGenerator/Debug/: QRunesGenerator.ilk
QRunesGenerator/QRunesGenerator/Example/: main.cpp
QRunesGenerator/QRunesGenerator/QRunesGenerator/: CMakeLists.txt  QAlgorithm.cpp  QAlgorithm.h  QR.h  QRException.h  QRFileController.cpp  QRFileController.h  QRGateController.cpp  QRGateController.h  QRLib.cpp  QRLib.h  QRunesGenerator.vcxproj  QRunesGenerator.vcxproj.filters
QRunesGenerator/QRunesGenerator/QRunesGenerator/Debug/: vc141.idb
QRunesGenerator/QRunesGenerator/QRunesGenerator/Debug/QRunesGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QRunesGenerator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QRunesGenerator/QRunesGenerator/QRunesGenerator/x64/Release/QRunesGenerator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  QRunesGenerator.lastbuildstate  QRunesGenerator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QRunesGenerator/QRunesGenerator/example/: CMakeLists.txt
QRunesGenerator/QRunesGenerator/pyQPanda/: CMakeLists.txt  pyQPanda.cpp  pyQPanda.vcxproj  pyQPanda.vcxproj.filters
QRunesGenerator/QRunesGenerator/pyQPanda/x64/Release/pyQPanda.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  pyQPanda.lastbuildstate  pyQPanda.write.1u.tlog
QRunesGenerator/QRunesGenerator/x64/Release/: QRunesGenerator.iobj  QRunesGenerator.ipdb  pyQPanda.exp  pyQPanda.ipdb  pyQPanda.lib  pyQPanda.pyd
QRunesGenerator/src/: QRFileController.cpp  QRGateController.cpp  QRGateController.h  QRLib.cpp  QRLib.h  QRState.cpp  QRState.h
