cmake_minimum_required(VERSION 3.1)
project(pyQPanda)
file(GLOB_RECURSE pyQPanda_SRC_CPP *.cpp)
add_library(${PROJECT_NAME} SHARED ${pyQPanda_SRC_CPP})
find_package(PythonInterp 3)
find_package(PythonLibs REQUIRED 3)
include_directories(${PYTHON_INCLUDE_DIRS})
if (UNIX)
    if (APPLE)
        set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".so")
    endif(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
elseif(WIN32)
    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".pyd")
endif(UNIX)
target_link_libraries(${PROJECT_NAME} QRunesGenerator ${PYTHON_LIBRARIES})
